--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -1,9 +1,20 @@
 .container-padding{
     padding-top: 10px;
 }
-/*.container{*/
-/*    padding-left: 10px;*/
-/*}*/
+
 .form-style{
     padding: 10px;
 }
+
+/*.notify{*/
+/*  position:absolute;*/
+/*  top:0px;*/
+/*  width:100%;*/
+/*  height:0;*/
+/*  box-sizing:border-box;*/
+/*  color:white;*/
+/*  text-align:center;*/
+/*  background:rgba(0,0,0,.6);*/
+/*  overflow:hidden;*/
+/*  transition:height .2s;*/
+/*}*/
