--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -3,21 +3,28 @@
 {% load crispy_forms_tags %}
 {% block content %}
  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/inventory.css' %}" type="text/css"/>
+
+<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js_scripts/inventory_page.js' %}"></script>
 <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
+
 
     <div class="container-padding">
     <div class="row">
-        <div class="alert alert-info">
-                {% if messages %}
-                    <ul class="messages">
-                    {% for message in messages %}
-                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
+        <div class="alert alert-info" id="messages_inventory">
+            {% if messages %}
+                <ul class="messages" >
+                {% for message in messages %}
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+
     </div>
 
         <div class="row">
@@ -36,12 +43,13 @@
                         </div>
                         <div class="modal-body">
                             <form class="form-style" action = "{% url 'inventory_home' %}" method="post">
+                                <input type="hidden" name="action" value="product_form">
                                 {% csrf_token %}
-                                {{product_form|crispy}}
+                                {{forms.product_form|crispy}}
 
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-warning">Save changes</button>
+                                    <input type="submit" class="btn btn-warning" name="product_form" value="Save changes"/>
                                 </div>
                             </form>
                         </div>
@@ -50,28 +58,29 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>&nbsp;Upload file</button>
+                <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target="#upload_modal"><i class="fa fa-plus"></i>&nbsp;Upload file</button>
 
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div id="upload_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Add menu item</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle">Add .csv file</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                             <form action="{% url "uploadfile" %}" method="post" enctype="multipart/form-data">
-                                <p>Only upload csv files</p>
+                             <form action="{% url "inventory_home" %}" method="post" enctype="multipart/form-data">
+                             <input type="hidden" name="action" value="upload_form">
                                 {% csrf_token %}
-                                {{ upload_form|crispy }}
-                                <button type="submit" class="btn btn-warning">Submit file</button>
-                            </form>
-                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-warning">Save changes</button>
-                             </div>
+                                {{ forms.upload_form|crispy }}
+                                {{ forms.upload_form.errors }}
+                                 <div class="modal-footer">
+                                     <input type="submit" class="btn btn-warning" name="upload_form" value="Upload"/>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                 </div>
+                             </form>
+
                         </div>
                     </div>
                   </div>
