--- a/static/css/base_page.css
+++ b/static/css/base_page.css
@@ -10,12 +10,15 @@
   max-width: 250px;
   height: 100vh;
   bottom: 0;
-  -webkit-transition: margin .25s ease-out;
-  -moz-transition: margin .25s ease-out;
-  -o-transition: margin .25s ease-out;
-  transition: margin .25s ease-out;
+  margin_right: 0;
+  /*-webkit-transition: margin .25s ease-out;*/
+  /*-moz-transition: margin .25s ease-out;*/
+  /*-o-transition: margin .25s ease-out;*/
+  /*transition: margin .25s ease-out;*/
   top: 0;
   left: 0;
+  /*background-color: #001a66;*/
+  color: #ffffff;
 }
 
 #sidebar .sidebar-header{
@@ -61,4 +64,17 @@
 .container-fluid{
   padding: 0 !important;
 }
-
+a.link_style{
+  color: #fccf14;
+}
+.navside_style{
+  background-color: #000033;
+}
+.navmain_style{
+  margin-left: 0;
+  background-color: #000033;
+}
+.sidebck{
+  background-color: #000033;
+  color: #ffffff;
+}
