--- a/templates/base.html
+++ b/templates/base.html
@@ -4,55 +4,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base_page.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free-5.15.1-web/css/all.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">#}
+{#    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free-5.15.1-web/css/all.css' %}">#}
     <title> Base Page </title>
 
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/jquery/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+{#    <script src="{% static 'vendor/jquery/jquery.mCustomScrollbar.concat.min.js' %}"></script>#}
     <script src="{% static 'js_scripts/base_page.js' %}"></script>
-    <script src="{% static 'vendor/fontawesome-free-5.15.1-web/js/all.js' %}"></script>
     <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
+{#    <script src="{% static 'vendor/fontawesome-free-5.15.1-web/js/all.js' %}"></script>#}
+
 </head>
 
 <body>
 
 <div class="container-fluid backcolor">
     <div class="d-flex" id="wrapper">
-        <nav class="bg-light border-right" id="sidebar">
+        <nav class=" navside_style border-right" id="sidebar">
             <div class="sidebar-header">
                 <h1>Rest POS</h1>
             </div>
             <div class="list-group list-group-flush">
-                <a href="/login" class="list-group-item list-group-item-action bg-light sidebck"><i
+                <a href="/login" class="list-group-item list-group-item-action sidebck"><i
                         class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
-                <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i
+                <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action sidebck"><i
                         class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
-                <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i
+                <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action sidebck"><i
                         class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fas fa-users"
+                <a href="#" class="list-group-item list-group-item-action sidebck"><i class="fas fa-users"
                                                                                                aria-hidden="true"></i>&nbsp;Staff</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fas fa-cutlery"
+                <a href="#" class="list-group-item list-group-item-action sidebck"><i class="fas fa-cutlery"
                                                                                                aria-hidden="true"></i>&nbsp;Kitchen</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cog"
+                <a href="#" class="list-group-item list-group-item-action sidebck"><i class="fa fa-cog"
                                                                                                aria-hidden="true"></i>&nbsp;Settings</a>
             </div>
         </nav>
 
         <div id="page-content-wrapper">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" id="navbar_style">
+            <nav class="navbar navbar-expand-lg navmain_style border-bottom" id="navbar_style">
                 <div class="container-fluid">
                     <button class="btn btn-warning" id="sidebarCollapse"><i class="fa fa-bars"></i></button>
-                    <div>
-                        {% if user.is_authenticated %}
-                            <p class="text-right">Logged in as: {{ user.username }}</p>
-                            <a class="btn btn-warning" href="/logout">Logout</a>
-                        {% endif %}
-                    </div>
-                </div>
 
+                     <!-- Dropdown -->
+                    {% if user.is_authenticated %}
+                    <ul class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle link_style" href="#" id="navbardrop" data-toggle="dropdown">
+                          <i class="fa fa-user" aria-hidden="true">
+                             <span>{{ user.username }}</span>
+                          </i>
+                      </a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                      </div>
+                    </ul>
+                    {% endif %}
+                </div>
             </nav>
 
             <div class="row row_style">
